# filesync-rs

./: Cargo.toml
filesync-rs-client/: Cargo.toml
filesync-rs-server/: Cargo.toml
filesync-rs-server/src/: filesync_rs_server.rs  main.rs
