[package]
name = "filesync-rs-server"
version = "0.1.0"
authors = ["jongyoungcha <jongyoungcha@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
lazy_static = "1.4.0"
futures = "0.1"
tokio-io = "0.1"
tokio-fs = "0.1"
tokio = "0.1"